--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
     <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
+
+    <title>Host Cloud - Free HTML5 Bootstrap Template</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="%PUBLIC_URL%/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/fontawesome.css">
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/templatemo-host-cloud.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/owl.css"> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,5 +51,26 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
+    <!-- Bootstrap core JavaScript -->
+    <script src="%PUBLIC_URL%/vendor/jquery/jquery.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Additional Scripts -->
+    <!-- <script src="%PUBLIC_URL%/assets/js/custom.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/owl.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/accordions.js"></script> -->
+
+
+    <!-- <script language = "text/Javascript"> 
+      cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
+      function clearField(t){                   //declaring the array outside of the
+      if(! cleared[t.id]){                      // function makes it static and global
+          cleared[t.id] = 1;  // you could use true and false, but that's more typing
+          t.value='';         // with more chance of typos
+          t.style.color='#fff';
+          }
+      }
+    </script> -->
   </body>
 </html>
